--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300&display=swap");
 :root {
     --1: #42a5e7;
-    --2: #ffffff;
 }
 
 * {
@@ -14,11 +13,6 @@
     border: none;
     transition: 0.2s linear;
     text-transform: capitalize;
-}
-
-*::selection {
-    background: var(--1);
-    color: #fff;
 }
 
 html {
@@ -47,7 +41,7 @@ header {
 }
 
 header .logo {
-    font-size: 2.5rem;
+    font-size: 32px;
     color: #fff;
     font-weight: bolder;
 }
@@ -67,9 +61,9 @@ header .navbar a:hover {
 }
 
 .home ul {
-    padding-top: 70px;
+    padding-top: 78px;
     list-style-type: none;
-    width: 25%;
+    width: 20%;
     background-color: #d8f0f4;
     position: fixed;
     height: 100%;
@@ -79,7 +73,7 @@ header .navbar a:hover {
 .home li a {
     display: block;
     color: #000;
-    padding: 16px 32px;
+    padding: 1.5rem 1.5rem;
     text-decoration: none;
     font-size: 14px;
 }
